Fix font size and spacing issues

--- a/src/scss/cs/footer.scss
+++ b/src/scss/cs/footer.scss
@@ -46,6 +46,7 @@ footer {
 }
 
 .footer-link {
+  font-size: 13px;
   padding-top: 0 !important;
 }
 
