--- a/src/scss/phy/footer.scss
+++ b/src/scss/phy/footer.scss
@@ -15,6 +15,20 @@
   outline: none !important;
 }
 
+.footer-link-header{
+  font-size: 13px;
+  font-weight: bold;
+  white-space: nowrap;
+  margin-top: 8px;
+  margin-bottom: 8px;
+}
+
+.footer-link-bottom{
+  display: flex;
+  justify-content: space-between;
+  white-space: nowrap;
+}
+
 .footer-top a:focus {
   outline: 0.2rem solid white;
 }
@@ -33,4 +47,5 @@
 
 .footer-link {
   @extend .py-2;
+  font-size: 13px;
 }
